--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "build": "tsc",
     "start": "node dist/server.js",
     "dev": "ts-node-dev --respawn --transpile-only src/server.ts",
+    "seed": "ts-node src/seeders/cli.ts",
     "test": "jest --detectOpenHandles --forceExit",
     "test:unit": "jest --testPathPattern=src/tests/unit --detectOpenHandles --forceExit",
     "test:integration": "jest --testPathPattern=src/tests/integration --detectOpenHandles --forceExit",
@@ -17,6 +18,8 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@types/bcrypt": "^5.0.2",
+    "bcrypt": "^6.0.0",
     "bcryptjs": "^3.0.2",
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
